@@ -199,8 +199,8 @@ abstract public class MessagePriorityTest extends CombinationTestSupport {
     }
 
     public void initCombosForTestQueues() {
-        addCombinationValues("useCache", new Object[] {new Boolean(true), new Boolean(false)});
-        addCombinationValues("deliveryMode", new Object[] {new Integer(DeliveryMode.NON_PERSISTENT), new Integer(DeliveryMode.PERSISTENT)});
+        addCombinationValues("useCache", new Object[] {Boolean.TRUE, Boolean.FALSE});
+        addCombinationValues("deliveryMode", new Object[] {Integer.valueOf(DeliveryMode.NON_PERSISTENT), Integer.valueOf(DeliveryMode.PERSISTENT)});
     }
 
     public void testQueues() throws Exception {
@@ -232,7 +232,7 @@ abstract public class MessagePriorityTest extends CombinationTestSupport {
     }
 
     public void initCombosForTestDurableSubs() {
-        addCombinationValues("prefetchVal", new Object[] {new Integer(1000), new Integer(MSG_NUM/4)});
+        addCombinationValues("prefetchVal", new Object[] {Integer.valueOf(1000), Integer.valueOf(MSG_NUM/4)});
     }
 
     public void testDurableSubs() throws Exception {
@@ -281,7 +281,7 @@ abstract public class MessagePriorityTest extends CombinationTestSupport {
     }
 
     public void initCombosForTestDurableSubsReconnect() {
-        addCombinationValues("prefetchVal", new Object[] {new Integer(1000), new Integer(MSG_NUM/2)});
+        addCombinationValues("prefetchVal", new Object[] {Integer.valueOf(1000), Integer.valueOf(MSG_NUM/2)});
         // REVISIT = is dispatchAsync = true a problem or is it just the test?
         addCombinationValues("dispatchAsync", new Object[] {Boolean.FALSE});
         addCombinationValues("useCache", new Object[] {Boolean.TRUE, Boolean.FALSE});
@@ -568,10 +568,10 @@ abstract public class MessagePriorityTest extends CombinationTestSupport {
 
     public void initCombosForTestQueueBacklog() {
         // the cache limits the priority ordering to available memory
-        addCombinationValues("useCache", new Object[] {new Boolean(false)});
+        addCombinationValues("useCache", new Object[] {Boolean.FALSE});
         // expiry processing can fill the cursor with a snapshot of the producer
         // priority, before producers are complete
-        addCombinationValues("expireMessagePeriod", new Object[] {new Integer(0)});
+        addCombinationValues("expireMessagePeriod", new Object[] {Integer.valueOf(0)});
     }
 
     public void testQueueBacklog() throws Exception {
@@ -608,10 +608,10 @@ abstract public class MessagePriorityTest extends CombinationTestSupport {
 
     public void initCombosForTestLowThenHighBatch() {
         // the cache limits the priority ordering to available memory
-        addCombinationValues("useCache", new Object[] {new Boolean(false)});
+        addCombinationValues("useCache", new Object[] {Boolean.FALSE});
         // expiry processing can fill the cursor with a snapshot of the producer
         // priority, before producers are complete
-        addCombinationValues("expireMessagePeriod", new Object[] {new Integer(0)});
+        addCombinationValues("expireMessagePeriod", new Object[] {Integer.valueOf(0)});
     }
 
     public void testLowThenHighBatch() throws Exception {
@@ -724,7 +724,7 @@ abstract public class MessagePriorityTest extends CombinationTestSupport {
         addCombinationValues("useCache", new Object[] {Boolean.FALSE, Boolean.TRUE});
         // expiry processing can fill the cursor with a snapshot of the producer
         // priority, before producers are complete
-        addCombinationValues("expireMessagePeriod", new Object[] {new Integer(0)});
+        addCombinationValues("expireMessagePeriod", new Object[] {Integer.valueOf(0)});
     }
 
     public void testEveryXHi() throws Exception {
